Morden: Fix Gallery Alignment Issue causing from setting max-width in desktop

--- a/morden/sass/_extra-child-theme.scss
+++ b/morden/sass/_extra-child-theme.scss
@@ -25,7 +25,6 @@ a {
 
 	@include media(desktop) {
 		box-shadow: 0 0 30px rgba(#000, 0.2);
-		max-width: 1134px;
 	}
 }
 
