--- a/morden/style-rtl.css
+++ b/morden/style-rtl.css
@@ -3987,7 +3987,6 @@ p:not(.site-title) a:hover {
 @media only screen and (min-width: 1024px) {
 	#page {
 		box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
-		max-width: 1134px;
 	}
 }
 
